--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
@@ -426,12 +426,15 @@ md-sidenav.chat md-content .conversasion .header .user-side .user {
 }
 md-sidenav.chat md-content .conversasion .chat-content .messages {
   height: calc(100vh - 120px);
-  width: calc(100% - 20px);
+  width: 100%;
   padding: 0;
   font-size: 15px;
   padding-top: 10px;
   padding-bottom: 6px;
   overflow: auto;
+}
+md-sidenav.chat md-content .conversasion .chat-content .messages .mCSB_outside + .mCSB_scrollTools {
+  left: -5px;
 }
 md-sidenav.chat md-content .conversasion .chat-content .messages .message {
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
